# tech-coach

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/workflows/: main.yml
datasets/: dummy.txt  iq_register.csv
notebooks/: Untitled.ipynb  test_config.py  test_copy_move.ipynb  testing_config.ipynb  testing_pather.ipynb
src/: settings.py
src/functions/: func.py
src/notebooks/: 00_imports.ipynb  bigquery-entur_ipynb.py  bigquery-freg_ipynb.py  dode.py  frost_ipynb.py  frost_kildomat.py  parquet-concatenation.py  parquet-performance.py  parquet-timed.py
src/parquet/: dataset.py  parquet.md  queries.py
src/parquet/dataset/: customers.csv
src/pseudo/: pseudo.py
src/secrets/: secrets.py
tests/: test_fizzbuzz.py
