[tool.poetry]
name = "tech-coach"
version = "0.1.0"
description = "Test project for tech-coaches in SSB."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dapla-toolbelt = "^1.7.0"
jupyterlab = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {extras = ["d", "jupyter"], version = "^23.3.0"}
ipykernel = "^6.23.1"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pre-commit = "^3.3.2"
pre-commit-hooks = "^4.4.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
lines_after_imports = 2
