[tool.poetry]
name = "tech-coach"
version = "0.1.0"
description = "Test project for tech-coaches in SSB."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dapla-toolbelt = ">=1.7.0"
jupyterlab = ">=3.6.1"  # 3.6 is used on Dapla
requests = ">=2.31.0"
pandas = ">=2.0.2"
jupytext = ">=1.14.6"
python-dotenv = ">=1.0.0"
openpyxl = ">=3.1.2"

[tool.poetry.dev-dependencies]
black = {extras = ["d", "jupyter"], version = "^23.3.0"}
ipykernel = "^6.23.1"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pre-commit = "^3.3.2"
pre-commit-hooks = "^4.4.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_gitignore = true
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector,-kernelspec"
cell_metadata_filter = "-all"
