[tool.poetry]
name = "tech-coach"
version = "0.1.0"
description = "Test project for tech-coaches in SSB."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dapla-toolbelt = "^1.8.0"
google-cloud-bigquery = "^3.11.1"
python-dotenv = "^1.0.0"
pandas = {extras = ["excel", "gcp", "performance"], version = "^2.0.2"}
duckdb = "^0.9.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d", "jupyter"], version = "^23.3.0"}
ipykernel = "^6.23.1"
isort = "^5.12.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.1"
nbstripout = "^0.6.1"
pre-commit = "^3.3.2"
pre-commit-hooks = "^4.4.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector,-kernelspec"
cell_metadata_filter = "-all"
